--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ body {
 }
 
 .main {
-    margin: 35vh auto;
+    margin: 0 auto;
+    position: relative;
+    top: 15vw;
     width: 40vw;
     background: #fff;
     border-radius: 1vw;
@@ -19,11 +21,18 @@ body {
 }
 
 span {
-    float: right;
+    position: absolute;
+    right: 0;
     cursor: pointer;
     width: 1.5vw;
     height: 1.8vw;
     text-align: center;
+}
+
+ul li {
+    position: relative;
+    margin-top: 1vw;
+    cursor: pointer;
 }
 
 span:hover {
